name:                fastly
version:             0.2.0.0
synopsis:            Comprehensive Haskell client library for the Fastly CDN API
description:
  Type-safe Haskell client for the Fastly CDN API with comprehensive
  coverage of services, purging, dictionaries, domains, and configuration.
homepage:            https://github.com/iand675/fastly#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
copyright:           2018-2025 Ian Duncan
category:            Web, Network, Cloud
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 9.10.1

library
  hs-source-dirs:      src
  exposed-modules:     Network.Fastly
                     , Network.Fastly.Types
                     , Network.Fastly.Client
                     , Network.Fastly.Service
                     , Network.Fastly.Purge
                     , Network.Fastly.Dictionary
                     , Network.Fastly.Domain
                     , Network.Fastly.Gzip
                     , Network.Fastly.VCL
                     , Network.Fastly.VCL.Types
                     , Network.Fastly.VCL.Parser
                     , Network.Fastly.VCL.Pretty
  build-depends:       base >= 4.7 && < 5,
                       http-client >= 0.7,
                       http-client-tls >= 0.3,
                       http-types >= 0.12,
                       text >= 1.2,
                       aeson >= 2.0,
                       bytestring >= 0.10,
                       unordered-containers >= 0.2,
                       iproute >= 1.7,
                       bytestring-lexing >= 0.5,
                       mtl >= 2.2,
                       time >= 1.9,
                       wai >= 3.2,
                       megaparsec >= 9.0,
                       prettyprinter >= 1.7
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat

test-suite fastly-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       VCLSpec
  build-depends:       base
                     , fastly
                     , text
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iand675/fastly
