cabal-version:       2.4
name:                fastly-compute-hello
version:             0.1.0.0
synopsis:            Hello World example for Fastly Compute@Edge in Haskell
description:
  A simple demonstration of running Haskell on Fastly Compute@Edge
  compiled to WebAssembly using GHC's wasm32-wasi backend.
homepage:            https://github.com/iand675/fastly
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
copyright:           2025 Ian Duncan
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable fastly-compute-hello
  main-is:             Main.hs
  hs-source-dirs:      src

  build-depends:       base >= 4.14 && < 5
                     , bytestring >= 0.10
                     , fastly-compute

  default-language:    Haskell2010

  ghc-options:        -Wall
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N

  -- Optimization flags (important for Wasm size)
  if impl(ghc >= 9.0)
    ghc-options:      -O2
                      -fexcess-precision
                      -optc-O3

-- Note: To build this for WebAssembly, you need to use wasm32-wasi-ghc
-- instead of regular ghc. See the README.md for build instructions.
